refactor: modernize Java 17 features, harden security, and add test suite